--- a/TipCalc/TipCalc.Core/TipCalc.Core.csproj
+++ b/TipCalc/TipCalc.Core/TipCalc.Core.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Calculation.cs" />
     <Compile Include="Services\ICalculation.cs" />
+    <Compile Include="ViewModels\TestViewModel.cs" />
     <Compile Include="ViewModels\TipViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
